[gd_scene load_steps=2 format=3 uid="uid://cdxbthvi7x7gj"]

[ext_resource type="Script" path="res://addons/bpb_quest_editor/log_panel.gd" id="1_870bi"]

[node name="log_panel" type="PanelContainer"]
anchors_preset = 9
anchor_bottom = 1.0
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_870bi")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="btn_new" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "New Log"

[node name="lbl_quest_name" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="log_container" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="timer_save" type="Timer" parent="."]
one_shot = true

[connection signal="button_down" from="VBoxContainer/HBoxContainer/btn_new" to="." method="_on_btn_new_button_down"]
[connection signal="timeout" from="timer_save" to="." method="_on_timer_save_timeout"]
